; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_LoadTexObj.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_LoadTexObj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_LoadTexObj(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %5, align 8
  br i1 true, label %6, label %10

6:                                                ; preds = %2
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32* @regionCB(i32* %7, i32 %8)
  store i32* %9, i32** %5, align 8
  br label %10

10:                                               ; preds = %6, %2
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @GX_LoadTexObjPreloaded(i32* %11, i32* %12, i32 %13)
  ret void
}

declare dso_local i32* @regionCB(i32*, i32) #1

declare dso_local i32 @GX_LoadTexObjPreloaded(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
